<resources>
    <string name="app_name">Almacen</string>
    <string name="no_login">Usuario y/o contraseña incorrectos</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Sign up</string>
    <string name="all">TODO</string>

    <string name="bt_google">Iniciar con Google</string>

    <string name="msg_AddProducto_correcto">Producto añadido correctamente</string>
    <string name="msg_UpdateProducto_correcto">Producto actualizado correctamente</string>
    <string name="msg_AddProducto_sinNombre">Falta ingresar el nombre</string>
    <string name="msg_DeleteProducto_correcto">Producto eliminado correctamente</string>

    <string name="msg_AddPedido_correcto">Pedido añadido correctamente</string>
    <string name="msg_UpdatePedido_correcto">Pedido actualizado correctamente</string>
    <string name="msg_AddPedido_sinNombre">Falta ingresar el nombre</string>
    <string name="msg_DeletePedido_correcto">Pedido eliminado correctamente</string>

    <string name="msg_AddProveedor_correcto">Proveedor añadido correctamente</string>
    <string name="msg_UpdateProveedor_correcto">Proveedor actualizado correctamente</string>
    <string name="msg_AddProveedor_sinNombre">Falta ingresar el nombre</string>
    <string name="msg_DeleteProveedor_correcto">Proveedor eliminado correctamente</string>

    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_producto">Productos</string>
    <string name="menu_pedido">Pedidos</string>
    <string name="menu_proveedores">Proveedores</string>

    <string name="Nombre">Nombre del Producto</string>
    <string name="Precio">Precio</string>
    <string name="Stock">Stock</string>
    <string name="btnAddProducto">Añadir Producto</string>
    <string name="btnUpdateProducto">Actualizar Producto</string>
    <string name="btnDeleteProducto">Eliminar Producto</string>

    <string name="DescripcionPedido">Descripcion del pedido</string>
    <string name="NombreCliente">Nombre del cliente</string>
    <string name="Estado">Estado del pedido</string>
    <string name="btnAddPedido">Añadir Pedido</string>
    <string name="btnUpdatePedido">Actualizar Pedido</string>
    <string name="btnDeletePedido">Eliminar Pedido</string>

    <string name="NombreProveedor">Nombre del Proveedor</string>
    <string name="Ubicacion">Ubicacion</string>
    <string name="ProximaEntrega">Proxima Entrega</string>
    <string name="btnAddProveedor">Añadir Proveedor</string>
    <string name="btnUpdateProveedor">Actualizar Proveedor</string>
    <string name="btnDeleteProveedor">Eliminar Proveedor</string>

    <string name="msg_imagen">Imagen</string>

</resources>