<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.home.UpdatePedidoFragment">

    <EditText
        android:id="@+id/etDescripcionPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/DescripcionPedido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etNombreCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NombreCliente"
        android:inputType="text" />

    <EditText
        android:id="@+id/etEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Estado"
        android:inputType="text" />

    <Button
        android:id="@+id/bt_update_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdatePedido"
        app:backgroundTint="#D5BFBF" />

    <Button
        android:id="@+id/bt_delete_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDeletePedido"
        app:backgroundTint="#D5BFBF" />

</LinearLayout>